# blog-post

./: README.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/(protected)/: layout.tsx  samplepage.tsx
app/(protected)/notes/: page.tsx
app/(protected)/posts/: page.tsx
app/(protected)/profile/: page.tsx
app/(public)/login/: page.tsx
app/api/imagekit-auth/: route.ts
app/auth/callback/: route.ts
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  schema.py
backend/app/controller/: authentication.py  users.py
backend/app/models/: __init__.py  person.py  user.py
backend/app/repository/: auth_repo.py  base_repo.py  person_repo.py  users_repo.py
backend/app/service/: authentication_service.py  users_service.py
backend/migrations/: env.py
backend/migrations/versions/: 4981f62d1323_second.py  ceb2e2b39cd3_first.py
components/: AuthButton.tsx  FooterComponent.tsx  GoogleTag.tsx  Header.tsx  MatomoAnalytics.tsx  NavigationLogo.tsx
components/module/user/: index.tsx
frontend/: next.config.mjs  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts  auth-options.ts  constants.ts
frontend/src/types/: next-auth.d.ts  profile.d.ts
lib/: amplitude.ts  analytics.ts  gtag.ts  schema.ts
types/: global.ts  posts.ts  profile.ts
utils/: auth-actions.ts  supabaseConnect.ts
utils/actions/: posts.ts
utils/supabase/: middleware.ts
(+23 files in other folders)
