[tool.poetry]
name = "app"
version = "0.1.0"
description = "Blog-post simple project"
authors = ["zafajardo9 <zafajardo9.programming@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.27"
sqlmodel = "^0.0.14"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
pydantic = "^2.6.1"
alembic = "^1.13.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "app.main:start"
